More refactoring and mass changes
